--- a/index.html
+++ b/index.html
@@ -94,8 +94,7 @@
         <br>
         <a href="https://doi.org/10.1016/j.rse.2024.114431">paper</a>
         /
-        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{sebastianelliMachineLearningForecast2024,\n  title={Machine Learning Forecast of Surface Solar Irradiance from Meteo Satellite Data},\n  author={Sebastianelli, Alessandro and Serva, Federico and Ceschini, Andrea and Paletta, Quentin and Panella, Massimo and Le Saux, Bertrand},\n  journal={Remote Sensing of Environment},\n  year={2024},\n  volume={315},\n  pages={114431}\n, issn = {0034-4257}\n, doi = {10.1016/j.rse.2024.114431}\n}')">BibTeX citation</a>
-        
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{sebastianelliMachineLearningForecast2024,\n  title={Machine Learning Forecast of Surface Solar Irradiance from Meteo Satellite Data},\n  author={Sebastianelli, Alessandro and Serva, Federico and Ceschini, Andrea and Paletta, Quentin and Panella, Massimo and Le Saux, Bertrand},\n  journal={Remote Sensing of Environment},\n  year={2024},\n  volume={315},\n  pages={114431}\n, issn = {0034-4257}\n, url = {https:/doi.org/10.1016/j.rse.2024.114431},\ndoi = {10.1016/j.rse.2024.114431}\n}')">BibTeX citation</a>
         <p></p>
         <p>
           Day-ahead surface solar irradiance forecasting using machine learning validated with in situ measurements of the Baseline Surface Radiation Network (BSRN).
@@ -118,6 +117,8 @@
         <em>Engineering Department of the University of Cambridge</em>, 2024
         <br>
         <a href="https://doi.org/10.17863/CAM.111000">manuscript</a>
+        /
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@phdthesis{palettathesis2023,\n title={Vision-Based Solar Forecasting with Deep Learning},\n author={Paletta, Quentin},\n year={2023},\n url={https:/www.repository.cam.ac.uk/handle/1810/372014},\n doi={10.17863/CAM.111000}\n}')">BibTeX citation</a>
         <p></p>
         <p>
           My PhD thesis!
@@ -159,6 +160,8 @@
           <a href="https://www.climatechange.ai/papers/iclr2024/69">paper</a>
           /
           <a href="https://github.com/SkyImageNet/skyimagenet">project</a>
+          /
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\@inproceedings{nieSkyImageNetLargescaleSky2024,\n  title = {{{SkyImageNet}}: {{Towards}} a Large-Scale Sky Image Dataset for Solar Power Forecasting},\n  author = {Nie, Yuhao and Paletta, Quentin and Wang, Sherrie},\n  booktitle = {Tackling Climate Change with Machine Learning workshop at the International Conference on Learning Representations (ICLR)},\n  year = {2024},\n  url = {https:/www.climatechange.ai/papers/iclr2024/69},\n  HAL_ID = {hal-04596740}}')">BibTeX citation</a>
           <p></p>
           <p>
           A multilocation sky image dataset for solar forecasting and atmospheric sciences.
@@ -187,6 +190,8 @@
         <em>Applied Energy</em>, 2024
         <br>
         <a href="https://doi.org/10.1016/j.apenergy.2024.123467">paper</a>
+        /
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
         <p></p>
         <p>
           Comparative study between local training, global training, and transfer learning for solar nowcasting based on sky images.
@@ -212,6 +217,8 @@
         <em>Energy Conversion and Management</em>, 2024
         <br>
         <a href="https://doi.org/10.1016/j.enconman.2024.118398">paper</a>
+        /
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
         <p></p>
         <p>
         Forecasting solar energy accurately is good, generalising beyond the location where the model was trained is even better! Here, we explore diverse zero-shot and few-shot learning tasks based on a model pre-trained at another location.
@@ -237,6 +244,8 @@
         <em>Advances in Applied Energy</em>, 2024
         <br>
         <a href="https://doi.org/10.1016/j.adapen.2024.100172">paper</a>
+        /
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
         <p></p>
         <p>
           We introduce SkyGPT, a physics-informed stochastic video prediction model that is able to generate multiple possible future images of the sky with diverse cloud motion patterns, by using past sky image sequences as input.
@@ -263,6 +272,8 @@
         <em>Renewable and Sustainable Energy Reviews</em>, 2024
         <br>
         <a href="https://doi.org/10.1016/j.rser.2023.113977">paper</a>
+        /
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
         <p></p>
         <p>
           Comprehensive survey of 72 open-source ground-based sky image datasets for very short-term solar forecasting applications.
@@ -294,6 +305,8 @@
       <em>Advances in Applied Energy</em>, 2023
       <br>
       <a href="https://doi.org/10.1016/j.adapen.2023.100150">paper</a>
+      /
+      <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
       <p></p>
       <p>
       Literature review on the field of computer vision-based solar forecasting with a particular focus at the application of deep learning to process cloud cover observations collected by sky cameras or meteorological satellites.
@@ -333,6 +346,8 @@
           <em>Applied Energy</em>, 2023
           <br>
           <a href="https://doi.org/10.1016/j.apenergy.2023.120818">paper</a>
+          /
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
           <p></p>
           <p>
           Combining sky images and satellite observations into a single machine learning framework for intra-hour solar forecasting.
@@ -373,6 +388,8 @@
           <em>8th World Conference on Photovoltaic Energy Conversion</em>, 2022
           <br>
           <a href="https://userarea.eupvsec.org/proceedings/WCPEC-8/4BV.4.31/">paper</a>
+          /
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
           <p></p>
           <p>
             Processing method for cloud cover videos to consistently centre the polar representation on the incoming flow of clouds using an optical flow algorithm.
@@ -414,6 +431,8 @@
           <em>Conference on Computer Vision and Pattern Recognition (CVPR) Workshop</em>, 2022
           <br>
           <a href="https://openaccess.thecvf.com/content/CVPR2022W/OmniCV/html/Paletta_SPIN_Simplifying_Polar_Invariance_for_Neural_Networks_Application_to_Vision-Based_CVPRW_2022_paper.html">paper</a>
+          /
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
           <p></p>
           <p>
             Comparative study between various data augmentation and scene presentation methods including the use of polar coordinates. Application to solar forecasting from sky images and satellite observations.
@@ -454,6 +473,8 @@
           <em>Applied Energy</em>, 2022
           <br>
           <a href="https://doi.org/10.1016/j.apenergy.2022.119924">paper</a>
+          /
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
           <p></p>
           <p>
             Novel deep learning architecture for solar irradiance and sky image prediction.
@@ -493,6 +514,8 @@
           <em>Solar Energy</em>, 2021
           <br>
           <a href="https://doi.org/10.1016/j.solener.2021.05.056">paper</a>
+          /
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
           <p></p>
           <p>
             Benchmarking of standard deep learning models for solar power nowcasting using sky images.
@@ -535,6 +558,8 @@
           <a href="https://s3.us-east-1.amazonaws.com/climate-change-ai/papers/neurips2020/8/paper.pdf">paper</a>
           /
           <a href="https://s3.us-east-1.amazonaws.com/climate-change-ai/papers/neurips2020/8/slides.pdf">slides</a>
+          /
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
           <p></p>
           <p>
             Sun tracking algorithm based on sky images only.
