--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <br>
         <a href="https://doi.org/10.1016/j.rse.2024.114431">paper</a>
         /
-        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{sebastianelliMachineLearningForecast2024,\n  title={Machine Learning Forecast of Surface Solar Irradiance from Meteo Satellite Data},\n  author={Sebastianelli, Alessandro and Serva, Federico and Ceschini, Andrea and Paletta, Quentin and Panella, Massimo and Le Saux, Bertrand},\n  journal={Remote Sensing of Environment},\n  year={2024},\n  volume={315},\n  pages={114431}\n, issn = {0034-4257}\n, url = {https:/doi.org/10.1016/j.rse.2024.114431},\ndoi = {10.1016/j.rse.2024.114431}\n}')">BibTeX citation</a>
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{sebastianelliMachineLearningForecast2024,\n title={Machine Learning Forecast of Surface Solar Irradiance from Meteo Satellite Data},\n author={Sebastianelli, Alessandro and Serva, Federico and Ceschini, Andrea and Paletta, Quentin and Panella, Massimo and Le Saux, Bertrand},\n journal={Remote Sensing of Environment},\n year={2024},\n volume={315},\n pages={114431},\n issn={0034-4257}\n, url={https:/doi.org/10.1016/j.rse.2024.114431},\n doi={10.1016/j.rse.2024.114431}\n}')">BibTeX</a>
         <p></p>
         <p>
           Day-ahead surface solar irradiance forecasting using machine learning validated with in situ measurements of the Baseline Surface Radiation Network (BSRN).
@@ -118,7 +118,7 @@
         <br>
         <a href="https://doi.org/10.17863/CAM.111000">manuscript</a>
         /
-          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@phdthesis{palettathesis2023,\n title={Vision-Based Solar Forecasting with Deep Learning},\n author={Paletta, Quentin},\n year={2023},\n url={https:/www.repository.cam.ac.uk/handle/1810/372014},\n doi={10.17863/CAM.111000}\n}')">BibTeX citation</a>
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@phdthesis{palettathesis2023,\n title={Vision-Based Solar Forecasting with Deep Learning},\n author={Paletta, Quentin},\n year={2023},\n url={https:/www.repository.cam.ac.uk/handle/1810/372014},\n doi={10.17863/CAM.111000}\n}')">BibTeX</a>
         <p></p>
         <p>
           My PhD thesis!
@@ -161,7 +161,7 @@
           /
           <a href="https://github.com/SkyImageNet/skyimagenet">project</a>
           /
-          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\@inproceedings{nieSkyImageNetLargescaleSky2024,\n  title = {{{SkyImageNet}}: {{Towards}} a Large-Scale Sky Image Dataset for Solar Power Forecasting},\n  author = {Nie, Yuhao and Paletta, Quentin and Wang, Sherrie},\n  booktitle = {Tackling Climate Change with Machine Learning workshop at the International Conference on Learning Representations (ICLR)},\n  year = {2024},\n  url = {https:/www.climatechange.ai/papers/iclr2024/69},\n  HAL_ID = {hal-04596740}}')">BibTeX citation</a>
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@inproceedings{nieSkyImageNetLargescaleSky2024,\n title = {{{SkyImageNet}}: {{Towards}} a Large-Scale Sky Image Dataset for Solar Power Forecasting},\n author = {Nie, Yuhao and Paletta, Quentin and Wang, Sherrie},\n booktitle = {Tackling Climate Change with Machine Learning workshop at the International Conference on Learning Representations (ICLR)},\n year = {2024},\n url={https:/www.climatechange.ai/papers/iclr2024/69},\n HAL_ID = {hal-04596740}}')">BibTeX</a>
           <p></p>
           <p>
           A multilocation sky image dataset for solar forecasting and atmospheric sciences.
@@ -191,7 +191,7 @@
         <br>
         <a href="https://doi.org/10.1016/j.apenergy.2024.123467">paper</a>
         /
-        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{nieSkyImagebasedSolar2024,\n title={Sky Image-Based Solar Forecasting Using Deep Learning with Heterogeneous Multi-Location Data: {{Dataset}} Fusion {\emph{versus}} Transfer Learning},\n author={Nie, Yuhao and Paletta, Quentin and Scott, Andea and Pomares, Luis Martin and Arbod, Guillaume and Sgouridis, Sgouris and Lasenby, Joan and Brandt, Adam},\n journal={Applied Energy},\n year={2024},\n volume={369},\n pages={123467},\n url={https:/doi.org/10.1016/j.apenergy.2024.123467},\n issn={0306-2619}\n, doi={10.1016/j.apenergy.2024.123467}\n}')">BibTeX</a>
         <p></p>
         <p>
           Comparative study between local training, global training, and transfer learning for solar nowcasting based on sky images.
@@ -218,7 +218,7 @@
         <br>
         <a href="https://doi.org/10.1016/j.enconman.2024.118398">paper</a>
         /
-        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{palettaImprovingCrosssiteGeneralisability2024,\n title={Improving Cross-Site Generalisability of Vision-Based Solar Forecasting Models with Physics-Informed Transfer Learning},\n author={Paletta, Quentin and Nie, Yuhao and {Saint-Drenan}, Yves-Marie and Le Saux, Bertrand},\n journal={Energy Conversion and Management},\n year={2024},\n volume={309},\n pages={118398},\n url={https:/doi.org/10.1016/j.enconman.2024.118398},\n issn={0196-8904}\n, doi={10.1016/j.enconman.2024.118398}\n}')">BibTeX</a>
         <p></p>
         <p>
         Forecasting solar energy accurately is good, generalising beyond the location where the model was trained is even better! Here, we explore diverse zero-shot and few-shot learning tasks based on a model pre-trained at another location.
@@ -245,7 +245,7 @@
         <br>
         <a href="https://doi.org/10.1016/j.adapen.2024.100172">paper</a>
         /
-        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{nieSkyGPTProbabilisticUltrashortterm2024,\n title={{{SkyGPT}}: {{Probabilistic Ultra-short-term Solar Forecasting Using Synthetic Sky Images}} from {{Physics-constrained VideoGPT}}},\n author={Nie, Yuhao and Zelikman, Eric and Scott, Andea and Paletta, Quentin and Brandt, Adam},\n journal={Advances in Applied Energy},\n year={2024},\n pages={100172},\n url={https:/doi.org/10.1016/j.adapen.2024.100172},\n issn={2666-7924}\n, doi={10.1016/j.adapen.2024.100172}\n}')">BibTeX</a>
         <p></p>
         <p>
           We introduce SkyGPT, a physics-informed stochastic video prediction model that is able to generate multiple possible future images of the sky with diverse cloud motion patterns, by using past sky image sequences as input.
@@ -273,7 +273,7 @@
         <br>
         <a href="https://doi.org/10.1016/j.rser.2023.113977">paper</a>
         /
-        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{nieOpensourceSkyImage2024,\n title={Open-Source Sky Image Datasets for Solar Forecasting with Deep Learning: {{A}} Comprehensive Survey},\n author={Nie, Yuhao and Li, Xiatong and Paletta, Quentin and Aragon, Max and Scott, Andea and Brandt, Adam},\n journal={Renewable and Sustainable Energy Reviews},\n year={2024},\n volume={189},\n pages={113977},\n url={https:/doi.org/10.1016/j.rser.2023.113977},\n issn={1364-0321}\n, doi={10.1016/j.rser.2023.113977}\n}')">BibTeX</a>
         <p></p>
         <p>
           Comprehensive survey of 72 open-source ground-based sky image datasets for very short-term solar forecasting applications.
@@ -306,7 +306,7 @@
       <br>
       <a href="https://doi.org/10.1016/j.adapen.2023.100150">paper</a>
       /
-      <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+      <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{palettaAdvancesSolarForecasting2023,\n title={Advances in Solar Forecasting: {{Computer}} Vision with Deep Learning},\n author={Paletta, Quentin and {Terr{\'e}n-Serrano}, Guillermo and Nie, Yuhao and Li, Binghui and Bieker, Jacob and Zhang, Wenqi and Dubus, Laurent and Dev, Soumyabrata and Feng, Cong},\n journal={Advances in Applied Energy},\n year={2023},\n volume={11},\n pages={100150},\n url={https:/doi.org/10.1016/j.adapen.2023.100150},\n issn={2666-7924}\n, doi={10.1016/j.adapen.2023.100150}\n}')">BibTeX</a>
       <p></p>
       <p>
       Literature review on the field of computer vision-based solar forecasting with a particular focus at the application of deep learning to process cloud cover observations collected by sky cameras or meteorological satellites.
@@ -347,7 +347,7 @@
           <br>
           <a href="https://doi.org/10.1016/j.apenergy.2023.120818">paper</a>
           /
-          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{palettaOmnivisionForecastingCombining2023,\n title={Omnivision Forecasting: {{Combining}} Satellite and Sky Images for Improved Deterministic and Probabilistic Intra-Hour Solar Energy Predictions},\n author={Paletta, Quentin and Arbod, Guillaume and Lasenby, Joan},\n journal={Applied Energy},\n year={2023},\n volume={336},\n pages={120818},\n url={https:/doi.org/10.1016/j.apenergy.2023.120818},\n issn={0306-2619}\n, doi={10.1016/j.apenergy.2023.120818}\n}')">BibTeX</a>
           <p></p>
           <p>
           Combining sky images and satellite observations into a single machine learning framework for intra-hour solar forecasting.
@@ -389,7 +389,7 @@
           <br>
           <a href="https://userarea.eupvsec.org/proceedings/WCPEC-8/4BV.4.31/">paper</a>
           /
-          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{palettaCloudFlowCentring2022,\n title={Cloud {{Flow Centring}} in {{Sky}} and {{Satellite Images}} for {{Deep Solar Forecasting}}},\n author={Paletta, Quentin and Arbod, Guillaume and Lasenby, Joan},\n journal={8th World Conference on Photovoltaic Energy Conversion},\n year={2022},\n url={https:/doi.org/10.4229/WCPEC-82022-4BV.4.31}, doi={10.4229/WCPEC-82022-4BV.4.31}\n}')">BibTeX</a>
           <p></p>
           <p>
             Processing method for cloud cover videos to consistently centre the polar representation on the incoming flow of clouds using an optical flow algorithm.
@@ -432,7 +432,7 @@
           <br>
           <a href="https://openaccess.thecvf.com/content/CVPR2022W/OmniCV/html/Paletta_SPIN_Simplifying_Polar_Invariance_for_Neural_Networks_Application_to_Vision-Based_CVPRW_2022_paper.html">paper</a>
           /
-          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@inproceedings{palettaSPINSimplifyingPolar2022,\n title={{{SPIN}}: {{Simplifying Polar Invariance}} for {{Neural Networks Application}} to {{Vision-Based Irradiance Forecasting}}},\n author={Paletta, Quentin and Hu, Anthony and Arbod, Guillaume and Blanc, Philippe and Lasenby, Joan},\n booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) Workshops},\n year={2022},\n pages={5182--5191},\n url={https:/doi.org/10.48550/arXiv.2111.14507},\n doi={10.48550/arXiv.2111.14507}\n}')">BibTeX</a>
           <p></p>
           <p>
             Comparative study between various data augmentation and scene presentation methods including the use of polar coordinates. Application to solar forecasting from sky images and satellite observations.
@@ -474,7 +474,7 @@
           <br>
           <a href="https://doi.org/10.1016/j.apenergy.2022.119924">paper</a>
           /
-          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{palettaECLIPSEEnvisioningCLoud2022,\n title={{{{ECLIPSE}}: {{Envisioning CLoud Induced Perturbations}} in {{Solar Energy}}}},\n author={Paletta, Quentin and Hu, Anthony and Arbod, Guillaume and Lasenby, Joan},\n journal={Applied Energy},\n year={2022},\n volume={326},\n pages={119924},\n url={https:/doi.org/10.1016/j.apenergy.2022.119924},\n issn={0306-2619}\n, doi={10.1016/j.apenergy.2022.119924}\n}')">BibTeX</a>
           <p></p>
           <p>
             Novel deep learning architecture for solar irradiance and sky image prediction.
@@ -515,7 +515,7 @@
           <br>
           <a href="https://doi.org/10.1016/j.solener.2021.05.056">paper</a>
           /
-          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{palettaBenchmarkingDeepLearning2021,\n title={Benchmarking of Deep Learning Irradiance Forecasting Models from Sky Images -- {{An}} in-Depth Analysis},\n author={Paletta, Quentin and Arbod, Guillaume and Lasenby, Joan},\n journal={Solar Energy},\n year={2021},\n volume={224},\n pages={855--867},\n url={https:/doi.org/10.1016/j.solener.2021.05.056},\n issn={0038-092X}\n, doi={10.1016/j.solener.2021.05.056}\n}')">BibTeX</a>
           <p></p>
           <p>
             Benchmarking of standard deep learning models for solar power nowcasting using sky images.
@@ -559,7 +559,7 @@
           /
           <a href="https://s3.us-east-1.amazonaws.com/climate-change-ai/papers/neurips2020/8/slides.pdf">slides</a>
           /
-          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '\\@article{code,\n  title={Title},\n  author={authors},\n  journal={Journal},\n  year={Year},\n  volume={vol},\n  pages={pages}\n, issn = {issn}\n, doi = {DOI}\n}')">BibTeX citation</a>
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{palettaTemporallyConsistentImagebased2020,\n title={A Temporally Consistent Image-based Sun Tracking Algorithm for Solar Energy Forecasting Applications},\n author={Paletta, Quentin and Lasenby, Joan},\n booktitle={NeurIPS 2020 Workshop on Tackling Climate Change with Machine Learning},\n year={2020},\n volume={vol},\n pages={pages},\n url={https:/www.climatechange.ai/papers/neurips2020/8}, doi={10.48550/arXiv.2012.01059}\n}')">BibTeX</a>
           <p></p>
           <p>
             Sun tracking algorithm based on sky images only.
