--- a/index.html
+++ b/index.html
@@ -76,6 +76,33 @@
 
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
+        <a href="images/asimov.jpg"><img src="images/asimov.jpg" alt="blind-date" width="160" height="160"></a>
+        </td>
+        <td width="75%" valign="middle">
+        <a href="http://dx.doi.org/10.2139/ssrn.5217972">
+          <span class="papertitle">Deep Learning-Based Downscaling of Seviri Data for High Spatial Resolution Near-Real-Time Wildfire Monitoring</span>
+        </a>
+        <br>
+        <a href="https://scholar.google.com/citations?user=HXrtkkcAAAAJ&hl=en">Maria Dekavalla</a>,
+        <strong>Quentin Paletta</strong>,
+        <a href="https://ieeexplore.ieee.org/author/37088825017">Chrysovalantis Tsiakos</a>,
+        <a href="https://amditis.iccs.gr/">Angelos Amditis</a>,
+        <br>
+        <em>Preprint</em>, 2025
+        <br>
+        <a href="http://dx.doi.org/10.2139/ssrn.5217972">preprint</a>
+        /
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{dekavalla5217972deep,\n title={Deep Learning-Based Downscaling of Seviri Data for High Spatial Resolution Near-Real-Time Wildfire Monitoring},\n author={Dekavalla, Maria and Paletta, Quentin and Tsiakos, Chrysovalantis and Amditis, Angelos},\n journal={Available at SSRN 5217972}}')">BibTeX</a>
+        <p></p>
+        <p>
+          The ESA-funded ASIMOV project employs multimodal deep learning to enhance SEVIRI satellite data, achieving 1 km resolution for near-real-time wildfire monitoring, comparable to LEO sensors like MODIS.
+        </p>
+        </td>
+      </tr>
+
+
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
         <a href="images/ssi.jpg"><img src="images/ssi.jpg" alt="blind-date" width="160" height="160"></a>
         </td>
         <td width="75%" valign="middle">
