--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                 <p class="name" style="text-align: center;">
                   Quentin Paletta
                 </p>
-                <p>I am a research fellow at the <a href="https://climate.esa.int/en/esa-climate/esa-climate-office/">Climate Office</a> of the <a href="https://www.esa.int/">European Space Agency (ESA)</a> in <a href="https://en.wikipedia.org/wiki/Harwell,_Oxfordshire">Harwell</a> in collaboration with the <a href="https://philab.esa.int/">Philab</a> of the <a href="https://www.esa.int/About_Us/ESRIN">European Space Research Institute</a> in <a href="https://en.wikipedia.org/wiki/Frascati">Frascati</a>, where I work on Earth observation and machine learning for climate and energy. 🌍 🛰️
+                <p>I am a Research Fellow and Technical Officer at the <a href="https://philab.esa.int/">Philab</a> of the <a href="https://www.esa.int/About_Us/ESRIN">European Space Research Institute</a> in <a href="https://en.wikipedia.org/wiki/Frascati">Frascati</a> in collaboration with the <a href="https://climate.esa.int/en/esa-climate/esa-climate-office/">Climate Office</a> of the <a href="https://www.esa.int/">European Space Agency (ESA)</a> in <a href="https://en.wikipedia.org/wiki/Harwell,_Oxfordshire">Harwell</a>, where I work on Earth observation and machine learning for climate and energy. 🌍 🛰️
+                  Since June 2025, I started a secondment at the <a href="https://www.iea.org/">International Energy Agency</a> (IEA) to explore the potential of Earth observation for the energy sector. ⚡️
                 </p>
                 <p>
                   Previously at the <a href="https://www.cam.ac.uk/">University of Cambridge</a>, I have developed deep learning algorithms for advancing solar nowcasting based on cloud cover observations from sky cameras and weather satellites. 🌤️
