ice sheet reconstruction paper

--- a/index.html
+++ b/index.html
@@ -80,6 +80,35 @@
 
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
+        <a href="images/ice_reconstruction_inr.png"><img src="images/ice_reconstruction_inr.png" alt="blind-date" width="160" height="160"></a>
+        </td>
+        <td width="75%" valign="middle">
+        <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5447938">
+          <span class="papertitle">Implicit Neural Representation for Ice Sheet Surface Elevation Reconstruction to Assess Elevation Change in High-Spatiotemporal Resolution</span>
+        </a>
+        <br>
+        <a href="https://peterjacknaylor.github.io/about/">Peter Naylor</a>,
+        <a href="https://scholar.google.com/citations?user=x1N0P8UAAAAJ&hl=en">Andreas Stokholm</a>,
+        <a href="https://orbit.dtu.dk/en/persons/natalia-havelund-andersen">Natalia Havelund Andersen</a>,
+        <a href="https://sites.google.com/site/nikolaosdionelis">Nikolaos Dionelis</a>,
+        <strong>Quentin Paletta</strong>,
+        <a href="https://orbit.dtu.dk/en/persons/sebastian-bjerregaard-simonsen">Sebastian Bjerregaard Simonsen</a>,
+        <br>
+        <em>Preprint</em>, 2025
+        <br>
+        <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5447938">preprint</a>
+        /
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{naylor5447938implicit, title={Implicit Neural Representation for Ice Sheet Surface Elevation Reconstruction to Assess Elevation Change in High-Spatiotemporal Resolution}, author={Naylor, Peter and Stokholm, Andreas and Andersen, Natalia Havelund and Dionelis, Nikolaos and Paletta, Quentin and Simonsen, Sebastian Bjerregaard}, journal={Available at SSRN 5447938}}')">BibTeX</a>
+        <p></p>
+        <p>
+          This study introduces a novel Implicit Neural Representation method trained on sparse satellite altimeter data (covering just 5% of the domain) to reconstruct missing ice surface elevation observations for Greenland’s Petermann Glacier, achieving an 84% performance improvement over current baselines and enabling dynamic ice sheet surface mapping over 12 years and 20,000+ km².
+        </p>
+        </td>
+      </tr>
+
+
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
         <a href="images/asimov.jpg"><img src="images/asimov.jpg" alt="blind-date" width="160" height="160"></a>
         </td>
         <td width="75%" valign="middle">
