--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         </td>
         <td style="padding:20px;width:75%;vertical-align:middle">
           <a href="https://www.climatechange.ai/papers/iclr2024/69">
-            <span class="papertitle">SkyImageNet: Towards a large-scale sky image dataset for solar power forecasting.</span>
+            <span class="papertitle">SolarBench (ex-SkyImageNet): Towards a large-scale sky image dataset for solar power forecasting.</span>
           </a>
           <br>
           <a href="https://yuhao-nie.github.io/">Yuhao Nie</a>,
@@ -221,10 +221,10 @@
           /
           <a href="https://github.com/SkyImageNet/skyimagenet">project</a>
           /
-          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@inproceedings{nieSkyImageNetLargescaleSky2024,\n title = {{{SkyImageNet}}: {{Towards}} a Large-Scale Sky Image Dataset for Solar Power Forecasting},\n author = {Nie, Yuhao and Paletta, Quentin and Wang, Sherrie},\n booktitle = {Tackling Climate Change with Machine Learning workshop at the International Conference on Learning Representations (ICLR)},\n year = {2024},\n url={https:/www.climatechange.ai/papers/iclr2024/69},\n HAL_ID = {hal-04596740}}')">BibTeX</a>
+          <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@inproceedings{nieSkyImageNetLargescaleSky2024,\n title = {{{SolarBench}}: {{Towards}} a Large-Scale Sky Image Dataset for Solar Power Forecasting},\n author = {Nie, Yuhao and Paletta, Quentin and Wang, Sherrie},\n booktitle = {Tackling Climate Change with Machine Learning workshop at the International Conference on Learning Representations (ICLR)},\n year = {2024},\n url={https:/www.climatechange.ai/papers/iclr2024/69},\n HAL_ID = {hal-04596740}}')">BibTeX</a>
           <p></p>
           <p>
-          A multilocation sky image dataset for solar forecasting and atmospheric sciences.
+          A multilocation satellite and sky image dataset for solar forecasting and atmospheric sciences.
           </p>
         </td>
       </tr>
