--- a/index.html
+++ b/index.html
@@ -78,6 +78,50 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
+      <!-- <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+        <a href="images/img.png"><img src="images/img.png" alt="blind-date" width="160" height="160"></a>
+        </td>
+        <td width="75%" valign="middle">
+        <a href="paper_link">
+          <span class="papertitle">Implicit Neural Representation for Ice Sheet Surface Elevation Reconstruction to Assess Elevation Change in High-Spatiotemporal Resolution</span>
+        </a>
+        <br>
+        <a href="link_to_author">Author Name</a>,
+        <strong>Quentin Paletta</strong>,
+        <br>
+        <em>Preprint</em>, 2025
+        <br>
+        <a href="paper_link">preprint</a>
+        /
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@article{naylor5447938implicit, title={Implicit Neural Representation for Ice Sheet Surface Elevation Reconstruction to Assess Elevation Change in High-Spatiotemporal Resolution}, author={Naylor, Peter and Stokholm, Andreas and Andersen, Natalia Havelund and Dionelis, Nikolaos and Paletta, Quentin and Simonsen, Sebastian Bjerregaard}, journal={Available at SSRN 5447938}}')">BibTeX</a>
+        <p></p>
+        <p>
+          Description.
+        </p>
+        </td>
+      </tr> -->
+
+      <tr>
+        <td style="padding:20px;width:25%;vertical-align:middle">
+        <a href="images/weo_2025.png"><img src="images/weo_2025.png" alt="blind-date" width="160" height="160"></a>
+        </td>
+        <td width="75%" valign="middle">
+        <a href="https://www.iea.org/reports/world-energy-outlook-2025">
+          <span class="papertitle">World Energy Outlook 2025</span>
+        </a>
+        <em>International Energy Agency (IEA)</em>, 2025
+        <br>
+        <a href="https://www.iea.org/reports/world-energy-outlook-2025">preprint</a>
+        /
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@report{cozzi_world_2025,	title = {World Energy Outlook 2025},	url = {https://www.iea.org/reports/world-energy-outlook-2025},	institution = {International Energy Agency ({IEA})},	author = {Cozzi, Laura and Gould, Tim and Bouckaert, Stéphanie and {McGlade}, Christophe and Wanner, Brent and Spencer, Thomas and Arsalane, Yasmine and D’Ambrosio, Davide and Martinos, Alex and Petropoulos, Apostolos and Singh, Siddharth and Wetzel, Daniel and Zeniewski, Peter},	date = {2025-11-12}}')">BibTeX</a>
+        <p></p>
+        <p>
+          The IEA’s flagship World Energy Outlook (WEO) is the most authoritative source of global energy analysis and projections. Updated annually to reflect the latest energy data, technology and market trends, and government policies, it explores a range of possible energy futures and their implications for energy security, access and emissions.
+        </p>
+        </td>
+      </tr>
+
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
         <a href="images/ice_reconstruction_inr.png"><img src="images/ice_reconstruction_inr.png" alt="blind-date" width="160" height="160"></a>
