--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </a>
         <em>International Energy Agency (IEA)</em>, 2025
         <br>
-        <a href="https://www.iea.org/reports/world-energy-outlook-2025">preprint</a>
+        <a href="https://www.iea.org/reports/world-energy-outlook-2025">report</a>
         /
         <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@report{cozzi_world_2025,	title = {World Energy Outlook 2025},	url = {https://www.iea.org/reports/world-energy-outlook-2025},	institution = {International Energy Agency ({IEA})},	author = {Cozzi, Laura and Gould, Tim and Bouckaert, Stéphanie and {McGlade}, Christophe and Wanner, Brent and Spencer, Thomas and Arsalane, Yasmine and D’Ambrosio, Davide and Martinos, Alex and Petropoulos, Apostolos and Singh, Siddharth and Wetzel, Daniel and Zeniewski, Peter},	date = {2025-11-12}}')">BibTeX</a>
         <p></p>
