--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <br>
         <a href="https://www.iea.org/reports/world-energy-outlook-2025">report</a>
         /
-        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@report{cozzi_world_2025,	title = {World Energy Outlook 2025},	url = {https://www.iea.org/reports/world-energy-outlook-2025},	institution = {International Energy Agency ({IEA})},	author = {Cozzi, Laura and Gould, Tim and Bouckaert, Stéphanie and {McGlade}, Christophe and Wanner, Brent and Spencer, Thomas and Arsalane, Yasmine and D’Ambrosio, Davide and Martinos, Alex and Petropoulos, Apostolos and Singh, Siddharth and Wetzel, Daniel and Zeniewski, Peter},	date = {2025-11-12}}')">BibTeX</a>
+        <a href="javascript:void(0);" onclick="prompt('Copy to clipboard: Ctrl+C, Enter', '@report{weo_2025,	title = {World Energy Outlook 2025},	url = {https://www.iea.org/reports/world-energy-outlook-2025},	institution = {International Energy Agency ({IEA})},	author = {Cozzi, Laura and Gould, Tim and Bouckaert, Stéphanie and {McGlade}, Christophe and Wanner, Brent and Spencer, Thomas and Arsalane, Yasmine and D’Ambrosio, Davide and Martinos, Alex and Petropoulos, Apostolos and Singh, Siddharth and Wetzel, Daniel and Zeniewski, Peter},	date = {2025-11-12}}')">BibTeX</a>
         <p></p>
         <p>
           The IEA’s flagship World Energy Outlook (WEO) is the most authoritative source of global energy analysis and projections. Updated annually to reflect the latest energy data, technology and market trends, and government policies, it explores a range of possible energy futures and their implications for energy security, access and emissions.
